samples/_failures_safe/1761696881_bb44ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc61ba61.c: In function ‘main’:
./samples/SAFE/__tmp_bc61ba61.c:154:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |     int rows
      |     ^~~
./samples/SAFE/__tmp_bc61ba61.c:154:5: error: expected declaration or statement at end of input
